# trunk-gnn

./: .gitignore  LICENSE  auto_train.py  git_automation.sh  opt_ssm  pyproject.toml  train.py
config/: default_config.yaml  sweep_config.yaml
data/: reduce_sim_data.ipynb
data/long_rollouts_100_max_amplitude_80_policy_harmonic_inputs/test/: states.csv
data/long_rollouts_100_max_amplitude_80_policy_harmonic_inputs/train/: inputs.csv  states.csv
data/long_rollouts_100_max_amplitude_80_policy_harmonic_inputs/train/raw/: data.csv
data/long_rollouts_100_max_amplitude_80_policy_harmonic_inputs_2/train/raw/: data.csv
data/long_rollouts_100_max_amplitude_80_policy_harmonic_inputs_2_raw/test/: inputs.csv  states.csv
data/long_rollouts_100_max_amplitude_80_policy_harmonic_inputs_2_raw/train/: states.csv
data/long_rollouts_100_max_amplitude_80_policy_harmonic_inputs_2_raw/train/raw/: data.csv
data/mass_100g_harmonic_test_1_short/train/: reduce_sim_data.ipynb
data/mass_100g_no_kick/train/: data.csv
data/mass_500g_harmonic_ssm/: info.txt
data/no_mass_1_test/raw/: data.csv
data/no_mass_no_kick/train/: data.csv
data/overfit-mn-1e1-short/: info.txt
data/overfit-mn-1e1-short-05-dt/: info.txt
data/overfit-raw/train/: states.csv
data/real-350-1/test/: inputs.csv  states.csv
data/real-350-1/train/: inputs.csv  states.csv
data/real/periodic-1/: data.csv
data/real/periodic-debug-1/: data.csv
data/real/periodic-debug-2/: data.csv
data/real/periodic-debug-3/: data.csv
data/real/periodic-debug-4/: data.csv
data/real/periodic-debug-5/: data.csv
data/real/periodic-debug-6/: data.csv
data/rollouts_100_max_amplitude_80_policy_harmonic_inputs/test/: data.csv
data/rollouts_100_max_amplitude_80_policy_harmonic_inputs/train/: data.csv
opt_ssm_model/: ssm_torch_model.py  ssmr_opt.pkl  ssmr_orth.pkl  z_offset.pkl
scripts/: auto_train.py  generate_dataset_from_real_measurements.py  test.py  train.py  vis.ipynb  visualize_dataset.ipynb
src/trunk_gnn/: data.py  dataset_utils.py  gnn.py  jacobian.py  masks.py  model.py  plotting.py  test_utils.py  train_utils.py
tests/: test_models.py
tools/: corr_matrix.npy  evaluate_sweep.ipynb  jax_test.ipynb  stats.py  test.ipynb  visualize_real_trunk_data.ipynb
(+236 files in other folders)
