[project]
name = "trunk-gnn"
version = "0.1.0"
description = "ASL Trunk GNN Model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda12]>=0.5.2",
    "scienceplots>=2.1.1",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
    "trunk-filter",
    "trunk-sim",
    "wandb>=0.19.7",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "cvxpy>=1.6.5",
    "findiff>=0.12.1",
    "ipykernel>=6.29.5",
    "osqp>=1.0.3",
    "plotly>=6.0.1",
    "pyomo>=6.9.2",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
    "ssmlearnpy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ['src']

[tool.uv]
package = true

[tool.uv.sources]
trunk-sim = { path = "../trunk-sim" }
trunk-filter = { path = "../trunk-filter" }
ssmlearnpy = { git = "https://github.com/mattiacenedese/SSMLearnPy.git", rev = "f538aabcf7b3afb3dc3d736e035241da485a0724" }

[tool.uv.sources.config]
path = "config.yaml"
