[project]
name = "trunk-gnn"
version = "0.1.0"
description = "ASL Trunk GNN Model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda12]>=0.5.2",
    "scienceplots>=2.1.1",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
    "trunk-filter",
    "trunk-sim",
    "wandb>=0.19.7",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ['src']

[tool.uv]
package = true

[tool.uv.sources]
trunk-sim = { path = "../trunk-sim" }
trunk-filter = { path = "../trunk-filter" }

[tool.uv.sources.config]
path = "config.yaml"
